--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_database: ^11.1.4
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
